--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"sapientnyc","repositoryName":"sapientnyc.github.io","branch":"master"},"site":{"logo":"http://sapient-global.github.io/best-practices/assets/images/logo.jpg","url":"http://sapientnyc.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://sapientnyc.github.io/themes/Casper"}}
+{"meta":{"username":"sapientnyc","repositoryName":"sapientnyc.github.io","branch":"master"},"site":{"logo":"","url":"http://sapientnyc.github.io"},"socialnetwork":{},"theme":{"name":"Casper","url":"http://sapientnyc.github.io/themes/Casper"}}
